orders, swagger fixes, utils
