# server/routes/gamesRouter.js
@@ -2,15 +2,13 @@ const express = require('express')
 const multer = require('multer')
 const router = express.Router()
 const checkRole = require('../middleware/checkRoleMiddleware')
-const authMiddleware = require('../middleware/authMiddleware')
 const path = require('path')
 const {
   getGames,
-  getAccessKey,
   getGameInfo,
   addGame,
   deleteGame,
-  changeAvailibility,
+  updateGame,
 } = require('../controllers/gamesController')
 
 // Where store download files
@@ -19,7 +17,10 @@ const storage = multer.diskStorage({
   filename: (req, file, callback) => {
     callback(
       null,
-      file.fieldname + '-' + Date.now() + path.extname(file.originalname)
+      path.parse(file.originalname).name +
+        '-' +
+        Date.now() +
+        path.extname(file.originalname)
     )
   },
 })
@@ -37,22 +38,21 @@ router.get('/gameInfo/:id', getGameInfo)
 // @des Get games
 router.get('/', getGames)
 
-// @route GET /api/games/accessToken?id=125123dsgsg,23t3imsv,6175383sgvmv4
+// @route GET /api/games/accessKey?id=125123dsgsg,23t3imsv,6175383sgvmv4
 // @des Get game access key
-router.get('/accessKey', authMiddleware, getAccessKey)
+// router.get('/accessKey', authMiddleware, getAccessKey)
 
 // !Admin panel
 // @route POST /api/games/
 // @des Add a game
 router.post('/', checkRole('ADMIN'), upload.single('image'), addGame)
-// router.post("/", addGame);
 
 // @route DELETE /api/games/:id
 // @des Delete a game
 router.delete('/:id', checkRole('ADMIN'), deleteGame)
 
-// @route PUT /api/games/:id?isAvailable=(true, false)
-// @des Set availibility
-router.put('/:id', changeAvailibility)
+// @route PUT /api/games/:id
+// @des Update game parameters
+router.put('/:id', checkRole('ADMIN'), upload.single('image'), updateGame)
 
 module.exports = router
